--- a/src/Homepage.css
+++ b/src/Homepage.css
@@ -1,3 +1,13 @@
+.centered-div 
+{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    width: 1000;
+    margin-top: -70px;
+  
+}
 .heading_name
 {
     background-color:pink;
